tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImport.errors.txt
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(1,8): error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(1,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(2,8): error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(2,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(3,8): error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(3,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(4,8): error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(4,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(5,8): error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(5,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(6,8): error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts(6,8): error TS2300: Duplicate identifier 'defaultBinding'.


==== tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0.ts (0 errors) ====
    
    export var a = 10;
    export var x = a;
    export var m = a;
    
==== tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_1.ts (12 errors) ====
    import defaultBinding, { } from "es6ImportDefaultBindingFollowedWithNamedImport_0";
           ~~~~~~~~~~~~~~
!!! error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { a } from "es6ImportDefaultBindingFollowedWithNamedImport_0";
           ~~~~~~~~~~~~~~
!!! error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { a as b } from "es6ImportDefaultBindingFollowedWithNamedImport_0";
           ~~~~~~~~~~~~~~
!!! error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { x, a as y } from "es6ImportDefaultBindingFollowedWithNamedImport_0";
           ~~~~~~~~~~~~~~
!!! error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { x as z,  } from "es6ImportDefaultBindingFollowedWithNamedImport_0";
           ~~~~~~~~~~~~~~
!!! error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { m,  } from "es6ImportDefaultBindingFollowedWithNamedImport_0";
           ~~~~~~~~~~~~~~
!!! error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImport_0"' has no default export or export assignment.
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.